<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnStartSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/today_btn_save"
         android:layout_marginTop="@dimen/common_padding_default"
         app:icon="@drawable/ic_save"
         app:iconGravity="top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/Widget.MaterialComponents.Button.TextButton"/>

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilStartCapital"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_padding_default"
         android:hint="@string/hint_start_capital"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnStartSave"
         app:layout_constraintTop_toTopOf="@+id/btnStartSave"
         app:layout_constraintBottom_toBottomOf="@+id/btnStartSave">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/etStartCapital"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="numberDecimal"
              android:imeOptions="actionNone"/>

     </com.google.android.material.textfield.TextInputLayout>


     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnFinalSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/today_btn_save"
         android:layout_marginTop="@dimen/common_padding_default"
         app:icon="@drawable/ic_save"
         app:iconGravity="top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnStartSave"
         style="@style/Widget.MaterialComponents.Button.TextButton"/>

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilFinalCapital"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_padding_default"
         android:hint="@string/hint_final_capital"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnStartSave"
         app:layout_constraintTop_toTopOf="@+id/btnFinalSave"
         app:layout_constraintBottom_toBottomOf="@+id/btnFinalSave">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/etFinalCapital"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="numberDecimal"
              android:imeOptions="actionNone"/>

     </com.google.android.material.textfield.TextInputLayout>


     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnExpensesSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/today_btn_save"
         android:layout_marginTop="@dimen/common_padding_default"
         app:icon="@drawable/ic_save"
         app:iconGravity="top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnFinalSave"
         style="@style/Widget.MaterialComponents.Button.TextButton"/>

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilExpenses"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_padding_default"
         android:hint="@string/hint_expenses_capital"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnFinalSave"
         app:layout_constraintTop_toTopOf="@+id/btnExpensesSave"
         app:layout_constraintBottom_toBottomOf="@+id/btnExpensesSave">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/etExpenses"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="numberDecimal"
              android:imeOptions="actionNone"/>

     </com.google.android.material.textfield.TextInputLayout>

     <TextView
         android:id="@+id/tvStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/today_status_new"
         android:textAppearance="?attr/textAppearanceHeadline5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilExpenses"
         app:layout_constraintBottom_toTopOf="@+id/imgStatus"/>
     <ImageView
         android:id="@+id/imgStatus"
         android:layout_width="@dimen/today_status_img_size"
         android:layout_height="@dimen/today_status_img_size"
         android:src="@drawable/ic_history_toggle_off"
         android:importantForAccessibility="no"
         app:tint="@color/gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvStatus"
         app:layout_constraintBottom_toBottomOf="parent" />

     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/today_go_to_record"
         app:icon="@drawable/ic_arrow_forward_ios"
         app:iconGravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>

     <FrameLayout
         android:id="@+id/progressView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/progress_transparent"
         tools:visibility="invisible">
          <com.google.android.material.progressindicator.LinearProgressIndicator
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:indeterminate="true" />
     </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
